{
    "name": "CustomActions",
    "maps": [
        {
            "name": "Main",
            "id": "4963b5e1-f748-44ab-8da8-b20d7aa48337",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "cdf76f82-2e3e-44b0-80b4-05d927d8e1e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "5af59fdf-787a-400f-bf73-ff46ac8aec08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpaceBar",
                    "type": "Button",
                    "id": "84df5206-91f2-4f7a-ae54-e6223a071301",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "68e78a89-ab9b-4e61-87e8-6b781406a0fc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcd99931-0c3e-4651-9aaa-aee9f4ee6f19",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e2adef1-ce97-4fa5-a7d7-0fb66fe7e452",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpaceBar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControls",
            "id": "9c9317c0-d7e1-498c-8325-27f790de6603",
            "actions": [
                {
                    "name": "RotateToLeft",
                    "type": "Button",
                    "id": "45080c3d-f7b6-42a9-9849-3ca14f37b48c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateToRight",
                    "type": "Button",
                    "id": "5ff420f2-8e4a-452e-9b30-60c644d6cf0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b35c75d5-4903-46d8-830e-4fbf00b3c6c0",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9524ec78-03cf-4c50-82d0-416fd370d77b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}